# just-a-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml  rag.py  search.py
src/: app.py  embed_data.py  rag.py  search.py
