[project]
name = "just-a-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "litellm>=1.89.3",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uuid>=1.30",
]
